--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+    <div>
+        <head>
+            <title>Botanify Tech</title>
+        </head>
+        <body>
+            <h1>Welcome to Botanify Tech!</h1>
+            <h2>Mission</h2>
+            <p>Our Plant Scanner application leverages advanced AI 
+                to identify various plants and provide comprehensive 
+                care information. Whether you're a seasoned gardener 
+                or a plant enthusiast, our app will help you take 
+                better care of your plants with ease.
+            </p>
+            <h3>Key Features</h3>
+            <p>
+                <ul>
+                    <li>Plant Identification: Simply scan a plant using your smartphone 
+                        camera, and our AI will instantly recognize the species</li>
+                    <li>Care Instructions: Receive detailed information on how to care for 
+                        the identified plant, 
+                        including watering, sunlight, soil type, and common issues</li>
+                    <li>Maintenance Tips: Get personalized tips and reminders to ensure your 
+                        plants stay healthy and vibrant.</li>
+                    <li>Database Access: Access a vast database of plants, including flowers, 
+                        shrubs, trees, and indoor plants.</li>
+                </ul>
+            </p>
+        </body>
+        
+
+    </div>
+</html>
 
