--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <div>
+    <div class = "homepage1">
         <head>
             <title>Botanify Tech</title>
         </head>
+        <link rel = 'stylesheet' href = 'style.css'>
         <body>
             <h1>Welcome to Botanify Tech!</h1>
-            <h2>Mission</h2>
             <p>Our Plant Scanner application leverages advanced AI 
                 to identify various plants and provide comprehensive 
                 care information. Whether you're a seasoned gardener 
@@ -27,9 +27,9 @@
                         shrubs, trees, and indoor plants.</li>
                 </ul>
             </p>
+
         </body>
         
-
     </div>
 </html>
 
