--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 </head>
 
 <body>
+    <img src="/images/LOGO.png" alt="Logo" width = "50" height = "50">
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#resources">Resources</a>
-        <a href="#company">Company</a>
-        <a href="#signin">Sign In</a>
         <a href="#demo">Demo</a>
+        <a href="#signin">Sign In</a>
+        <a href="#company">Company</a>
+        <a href="#resources">Resources</a>
+        <a href="#products">Products</a>
+        <a class="active" href="#home">Home</a>
       </div>
-      
+
     <div class="homepage1">
 
         <h1>Welcome to Botanify Tech!</h1>
@@ -25,6 +26,10 @@
             or a plant enthusiast, our app will help you take
             better care of your plants with ease.
         </p>
+    </div>
+
+
+    <div class = "keys">
         <h2>Key Features</h2>
         <p>
         <ul>
@@ -41,8 +46,6 @@
         </p>
 
     </div>
-
-
 </body>
 </html>
 
