--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             or a plant enthusiast, our app will help you take
             better care of your plants with ease.
         </p>
+
+        <img src = "/images/iphone-mockup.png" alt = "iPhone" width = "100" height = "100">
+
         <h2>Key Features</h2>
         <ul>
             <li>Plant Identification: Simply scan a plant using your smartphone
