--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             better care of your plants with ease.
         </p>
 
-        <img src = "/images/iphone-mockup.png" alt = "iPhone" width = "100" height = "100">
+        <img src = "/images/iphone-mockup.png" alt = "iPhone" width = "300" height = "300" class = "center">
 
         <h2>Key Features</h2>
         <ul>
