--- a/index.html
+++ b/index.html
@@ -20,7 +20,35 @@
         <a href="#products">Products</a>
         <a class="active" href="#home">Home</a>
       </div>
-
+      <div class="scene">
+        <div class="banner">
+         <div class="panel"></div>
+         <div class="panel"></div>
+         <div class="panel"></div>
+         <div class="panel"></div>
+         <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+          <div class="panel"></div>
+        </div>
+        <div class="screen"></div>
+      </div>
     <div class="homepage1">
 
         <h1>Welcome to Botanify Tech!</h1>
@@ -35,14 +63,14 @@
 
         <h2>Key Features</h2>
         <ul>
-            <li>Plant Identification: Simply scan a plant using your smartphone
+            <li><b>Plant Identification:</b> Simply scan a plant using your smartphone
                 camera, and our AI will instantly recognize the species</li>
-            <li>Care Instructions: Receive detailed information on how to care for
+            <li><b>Care Instructions: </b>Receive detailed information on how to care for
                 the identified plant,
                 including watering, sunlight, soil type, and common issues</li>
-            <li>Maintenance Tips: Get personalized tips and reminders to ensure your
+            <li><b>Maintenance Tips:</b> Get personalized tips and reminders to ensure your
                 plants stay healthy and vibrant.</li>
-            <li>Database Access: Access a vast database of plants, including flowers,
+            <li><b>Database Access:</b> Access a vast database of plants, including flowers,
                 shrubs, trees, and indoor plants.</li>
         </ul>
     </div>
